# Kinect-Azure-Processing

./: .gitignore  CMakeLists.txt  CMakeSettings.json  IOUtils.cpp  IOUtils.h  Kinect-Azure-Processor.sln  Kinect-Azure-Processor.vcxproj  Kinect-Azure-Processor.vcxproj.filters  LICENSE  Ply.cpp  Ply.h  README.md
examples/: Sample Calibration File.txt  Sample Joint Location Output.json  Sample Point Cloud Output.pcd
src/: BodyTrackingHelpers.h  BodyTrackingUtils.cpp  BodyTrackingUtils.h  IOUtils.cpp  IOUtils.h  KinectAzureProcessor.cpp  KinectAzureProcessor.h  KinectAzureUtils.cpp  KinectAzureUtils.h  MatrixUtils.cpp  MatrixUtils.h  PclUtils.cpp  PclUtils.h  Ply.cpp  Ply.h  main.cpp
